--- a/(tabs)/index.html
+++ b/(tabs)/index.html
@@ -1,4 +1,25 @@
-<!DOCTYPE html><html  lang="en"><head><title data-rh="true"></title><meta charSet="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><style id="expo-reset">#root,body,html{height:100%}body{overflow:hidden}#root{display:flex}</style><style id="react-native-stylesheet">[stylesheet-group="0"]{}
+<!DOCTYPE html><html  lang="en"><head><title data-rh="true"></title><meta charSet="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><style data-precedence="elements" data-href="__react-navigation_elements_Pressable_hover">
+  .__react-navigation_elements_Pressable_hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: inherit;
+    background-color: var(--overlay-color);
+    opacity: 0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+  }
+
+  a:hover > .__react-navigation_elements_Pressable_hover, button:hover > .__react-navigation_elements_Pressable_hover {
+    opacity: var(--overlay-hover-opacity);
+  }
+
+  a:active > .__react-navigation_elements_Pressable_hover, button:active > .__react-navigation_elements_Pressable_hover {
+    opacity: var(--overlay-active-opacity);
+  }
+</style><meta http-equiv="X-UA-Compatible" content="IE=edge"/><style id="expo-reset">#root,body,html{height:100%}body{overflow:hidden}#root{display:flex}</style><style id="react-native-stylesheet">[stylesheet-group="0"]{}
 body{margin:0;}
 button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0);}
@@ -17,6 +38,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1bq2mok{margin:3px;}
 .r-1d4xg89{border-bottom-color:rgba(170,184,194,1.00);border-left-color:rgba(170,184,194,1.00);border-right-color:rgba(170,184,194,1.00);border-top-color:rgba(170,184,194,1.00);}
 .r-1dzdj1l{border-bottom-left-radius:10px;border-bottom-right-radius:10px;border-top-left-radius:10px;border-top-right-radius:10px;}
+.r-1e49q8a{border-bottom-color:rgba(245,158,11,1.00);border-left-color:rgba(245,158,11,1.00);border-right-color:rgba(245,158,11,1.00);border-top-color:rgba(245,158,11,1.00);}
 .r-1f0042m{border-bottom-left-radius:5px;border-bottom-right-radius:5px;border-top-left-radius:5px;border-top-right-radius:5px;}
 .r-1j16mh1{border-bottom-left-radius:100%;border-bottom-right-radius:100%;border-top-left-radius:100%;border-top-right-radius:100%;}
 .r-1jkafct{border-bottom-left-radius:2px;border-bottom-right-radius:2px;border-top-left-radius:2px;border-top-right-radius:2px;}
@@ -29,6 +51,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1rvyss1{border-bottom-color:rgba(255,255,255,0.20);border-left-color:rgba(255,255,255,0.20);border-right-color:rgba(255,255,255,0.20);border-top-color:rgba(255,255,255,0.20);}
 .r-1sp51qo{padding:10px;}
 .r-1udh08x{overflow-x:hidden;overflow-y:hidden;}
+.r-1upjcm2{border-bottom-color:rgba(239,68,68,1.00);border-left-color:rgba(239,68,68,1.00);border-right-color:rgba(239,68,68,1.00);border-top-color:rgba(239,68,68,1.00);}
 .r-1uu6nss{padding:5px;}
 .r-1w15a45{border-bottom-color:rgba(229,231,235,1.00);border-left-color:rgba(229,231,235,1.00);border-right-color:rgba(229,231,235,1.00);border-top-color:rgba(229,231,235,1.00);}
 .r-1xfd6ze{border-bottom-left-radius:8px;border-bottom-right-radius:8px;border-top-left-radius:8px;border-top-right-radius:8px;}
@@ -44,6 +67,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-fx7oqy{border-bottom-color:rgba(0,0,255,1.00);border-left-color:rgba(0,0,255,1.00);border-right-color:rgba(0,0,255,1.00);border-top-color:rgba(0,0,255,1.00);}
 .r-kdyh1x{border-bottom-left-radius:6px;border-bottom-right-radius:6px;border-top-left-radius:6px;border-top-right-radius:6px;}
 .r-krxsd3{display:-webkit-box;}
+.r-m4suti{border-bottom-color:rgba(209,213,219,1.00);border-left-color:rgba(209,213,219,1.00);border-right-color:rgba(209,213,219,1.00);border-top-color:rgba(209,213,219,1.00);}
 .r-nsbfu8{padding:16px;}
 .r-rs99b7{border-bottom-width:1px;border-left-width:1px;border-right-width:1px;border-top-width:1px;}
 .r-t60dpp{padding:0px;}
@@ -122,7 +146,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-12vffkv{pointer-events:none!important;}
 .r-135wba7{line-height:24px;}
 .r-13aq9py{animation-name:r-1iq689l;}
-.r-13hce6t{margin-left:4px;}
 .r-13qz1uu{width:100%;}
 .r-13tjlyg{transition-duration:0.1s;}
 .r-1472mwg{height:24px;}
@@ -150,6 +173,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-18u1ve8{color:rgba(255,255,255,0.40);}
 .r-18u37iz{flex-direction:row;}
 .r-19h5ruw{margin-top:15px;}
+.r-19lq7b1{top:16px;}
 .r-19oahor{font-size:64px;}
 .r-19wmn03{width:20px;}
 .r-19z077z{touch-action:none;}
@@ -242,6 +266,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1vr29t4{font-weight:800;}
 .r-1w6e6rj{flex-wrap:wrap;}
 .r-1wbh5a2{flex-shrink:1;}
+.r-1wfu06s{background-color:rgba(248,113,113,1.00);}
 .r-1wtj0ep{justify-content:space-between;}
 .r-1wyyakw{z-index:-1;}
 .r-1wzrnnt{margin-top:16px;}
@@ -268,6 +293,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-633pao * {pointer-events:none;}
 .r-633pao{pointer-events:none!important;}
 .r-6dt33c{opacity:1;}
+.r-6e0ovw{width:80%;}
 .r-6gpygo{margin-bottom:12px;}
 .r-6lgyle{color:rgba(153,27,27,1.00);}
 .r-6taxm2:-ms-input-placeholder{color:var(--placeholderTextColor);opacity:1;}
@@ -298,10 +324,12 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-cfp7ip{width:60px;}
 .r-cpa5s6{scroll-snap-align:start;}
 .r-cqee49{color:rgba(0,0,0,1.00);}
+.r-djgu52{color:rgba(102,102,102,1.00);}
 .r-dkge59{background-color:rgba(170,184,194,1.00);}
 .r-dnmrzs{max-width:100%;}
 .r-dpkc41{background-color:rgba(239,68,68,1.00);}
 .r-drfeu3{background-color:rgba(0,0,0,0.50);}
+.r-e1k2in{right:16px;}
 .r-eafdt9{transition-duration:0.15s;}
 .r-ebwn4k{animation-name:r-q67da2;}
 .r-ehq7j7{background-size:contain;}
@@ -338,6 +366,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-n6v787{font-size:13px;}
 .r-nvplwv{animation-timing-function:ease-out;}
 .r-o4n3w5{width:23px;}
+.r-ojf8lh{gap:6px;}
 .r-orgf3d{opacity:0;}
 .r-pgx3k3{background-color:rgba(243,244,246,1.00);}
 .r-q4m81j{text-align:center;}
@@ -362,6 +391,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-vdtk7f{color:rgba(5,150,105,1.00);}
 .r-vvn4in{background-position:center;}
 .r-vw2c0b{font-weight:bold;}
+.r-wc24c3{z-index:20;}
 .r-wfqgy4{transition-duration:100ms;}
 .r-ws9h79{left:4px;}
 .r-x11e5r{font-family:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
@@ -387,5 +417,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/_expo/static/css/modal.module-33361d5c796745334f151cac6c469469.css" as="style"><link rel="stylesheet" href="/_expo/static/css/modal.module-33361d5c796745334f151cac6c469469.css"><link rel="icon" href="/favicon.ico" /></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><div style="flex:1;display:flex"><!--$--><!--/$--></div></div></div><script src="/_expo/static/js/web/entry-9f8d4ffda334af58510eab2f3c9a34ec.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/_expo/static/css/modal.module-33361d5c796745334f151cac6c469469.css" as="style"><link rel="stylesheet" href="/_expo/static/css/modal.module-33361d5c796745334f151cac6c469469.css"><link rel="icon" href="/favicon.ico" /></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><div style="flex:1;display:flex"><!--$--><div style="flex:1;display:flex"><div class="css-g5y9jx r-13awgt0"><div style="position:absolute;left:0;right:0;top:0;bottom:0;pointer-events:none;visibility:hidden"></div><div class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0 r-18u37iz"><div class="css-g5y9jx r-1p0dtai r-dnmrzs r-ipm5af" style="position:absolute;z-index:1;left:calc(280px * -1);transition:transform 0.3s;transform:translateX(0);background-color:rgba(255,255,255,1.00);border-top-right-radius:16px;border-bottom-right-radius:16px;width:280px"><div class="css-g5y9jx r-150rngu r-eqz5dr r-16y2uox r-1wbh5a2 r-11yh6sk r-1rnoaur r-agouwx r-13awgt0"><div class="css-g5y9jx" style="padding-top:12px;padding-bottom:12px;padding-left:12px;padding-right:12px"><div class="css-g5y9jx r-1awozwy r-zpf9xq r-1pcd2l5"><div class="css-g5y9jx r-1awozwy r-18dmg4z r-1llaxt6 r-uvuy5l r-1777fci r-6gpygo r-cfp7ip"><div dir="auto" class="css-146c3p1"></div></div><div dir="auto" class="css-146c3p1 r-jwli3a r-1i10wst r-1kfrs79 r-15zivkp"> </div><div dir="auto" class="css-146c3p1 r-10gvo5 r-1b43r93">Sin rol</div></div><div class="css-g5y9jx r-13awgt0 r-m611by"><div class="css-g5y9jx r-1udh08x" style="border-top-left-radius:56px;border-top-right-radius:56px;border-bottom-right-radius:56px;border-bottom-left-radius:56px;background-color:rgba(0,0,0,0.00)"><button role="button" aria-selected="false" tabindex="0" class="css-g5y9jx r-1otgn73" style="cursor:pointer;opacity:1" type="button"><div class="__react-navigation_elements_Pressable_hover" style="--overlay-color:rgba(28, 28, 30, 0.68);--overlay-hover-opacity:0.08;--overlay-active-opacity:0.16"></div><div class="css-g5y9jx r-1awozwy r-18u37iz r-kritb0 r-1vl2501 r-w67my2" style="border-top-left-radius:56px;border-top-right-radius:56px;border-bottom-right-radius:56px;border-bottom-left-radius:56px"><div dir="auto" class="css-146c3p1"></div><div class="css-g5y9jx r-13awgt0 r-l00any r-1a11zyx" style="margin-left:12px"><div dir="auto" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-135wba7 r-9iso6" style="color:rgba(28,28,30,0.68);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Dashboard</div></div></div></button></div><div class="css-g5y9jx r-1udh08x" style="border-top-left-radius:56px;border-top-right-radius:56px;border-bottom-right-radius:56px;border-bottom-left-radius:56px;background-color:rgba(0,0,0,0.00)"><button role="button" aria-selected="false" tabindex="0" class="css-g5y9jx r-1otgn73" style="cursor:pointer;opacity:1" type="button"><div class="__react-navigation_elements_Pressable_hover" style="--overlay-color:rgba(28, 28, 30, 0.68);--overlay-hover-opacity:0.08;--overlay-active-opacity:0.16"></div><div class="css-g5y9jx r-1awozwy r-18u37iz r-kritb0 r-1vl2501 r-w67my2" style="border-top-left-radius:56px;border-top-right-radius:56px;border-bottom-right-radius:56px;border-bottom-left-radius:56px"><div dir="auto" class="css-146c3p1"></div><div class="css-g5y9jx r-13awgt0 r-l00any r-1a11zyx" style="margin-left:12px"><div dir="auto" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-135wba7 r-9iso6" style="color:rgba(28,28,30,0.68);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Pagos</div></div></div></button></div><div class="css-g5y9jx r-1udh08x" style="border-top-left-radius:56px;border-top-right-radius:56px;border-bottom-right-radius:56px;border-bottom-left-radius:56px;background-color:rgba(0,0,0,0.00)"><button role="button" aria-selected="false" tabindex="0" class="css-g5y9jx r-1otgn73" style="cursor:pointer;opacity:1" type="button"><div class="__react-navigation_elements_Pressable_hover" style="--overlay-color:rgba(28, 28, 30, 0.68);--overlay-hover-opacity:0.08;--overlay-active-opacity:0.16"></div><div class="css-g5y9jx r-1awozwy r-18u37iz r-kritb0 r-1vl2501 r-w67my2" style="border-top-left-radius:56px;border-top-right-radius:56px;border-bottom-right-radius:56px;border-bottom-left-radius:56px"><div dir="auto" class="css-146c3p1"></div><div class="css-g5y9jx r-13awgt0 r-l00any r-1a11zyx" style="margin-left:12px"><div dir="auto" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-135wba7 r-9iso6" style="color:rgba(28,28,30,0.68);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Perfil</div></div></div></button></div></div><div class="css-g5y9jx r-18t3q49 r-5kkj8d r-1pcd2l5"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ytbthy" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-1tsma7m r-ubezar r-majxgm r-uhung1">Cerrar Sesión</div></div></div></div></div></div><div class="css-g5y9jx r-13awgt0" style="transition:transform 0.3s;transform:translateX(0)"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0 r-1udh08x r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-105ug2t" style="display:flex;z-index:0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(242,242,242,1.00)"><div class="css-g5y9jx r-184en5c r-12vffkv"><div class="css-g5y9jx r-12vffkv" style="height:64px"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-12vffkv"><div class="css-g5y9jx r-qklmqi r-13awgt0 r-105ug2t" style="background-color:rgba(255,255,255,1.00);border-bottom-color:rgba(216,216,216,1.00)"></div></div><div class="css-g5y9jx r-633pao" style="height:0px"></div><div class="css-g5y9jx r-1oszu61 r-13awgt0 r-18u37iz r-12vffkv"><div class="css-g5y9jx r-1awozwy r-18u37iz r-1h0z5md r-12vffkv" style="margin-left:0px"><button aria-label="Show navigation menu" role="button" tabindex="0" class="css-g5y9jx r-1otgn73 r-1awozwy r-1dzdj1l r-18u37iz r-is05cd" style="cursor:pointer;opacity:1" type="button"><div class="css-g5y9jx r-1mlwlqe r-1udh08x r-417010 r-1472mwg r-bx70bn r-17q4wm6 r-lrsllp"><div class="css-g5y9jx r-1niwhzg r-vvn4in r-u6sd8q r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw r-ehq7j7" style="filter:url(#tint-2)"></div><svg style="position:absolute;height:0;visibility:hidden;width:0"><defs><filter id="tint-2"><feFlood flood-color="rgb(28, 28, 30)"></feFlood><feComposite in2="SourceAlpha" operator="in"></feComposite></filter></defs></svg></div></button></div><div class="css-g5y9jx r-1777fci r-12vffkv" style="max-width:-68px;margin-left:4px"><h1 dir="auto" aria-level="1" role="heading" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1i10wst" style="color:rgba(28,28,30,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Dashboard</h1></div><div class="css-g5y9jx r-1awozwy r-18u37iz r-17s6mgv r-1iusvr4 r-16y2uox r-12vffkv" style="margin-right:0px"></div></div></div></div><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-1awozwy r-13awgt0 r-1777fci"><div dir="auto" class="css-146c3p1">Selecciona un rol para continuar</div></div></div></div></div></div></div><div aria-hidden="true" class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-37nfst r-1nmszxz" style="opacity:0;pointer-events:none;background-color:rgba(0,0,0,0.50)"><button aria-label="Close drawer" role="button" tabindex="0" class="css-g5y9jx r-1loqt21 r-1otgn73 r-13awgt0" style="pointer-events:none" type="button"></button></div></div></div></div><!--/$--></div></div></div></div></div><!--/$--></div></div></div><script src="/_expo/static/js/web/entry-cf6493893412be6c09ead907660bc66f.js" defer></script>
 </body></html>
