--- a/complete-profile.html
+++ b/complete-profile.html
@@ -17,6 +17,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1bq2mok{margin:3px;}
 .r-1d4xg89{border-bottom-color:rgba(170,184,194,1.00);border-left-color:rgba(170,184,194,1.00);border-right-color:rgba(170,184,194,1.00);border-top-color:rgba(170,184,194,1.00);}
 .r-1dzdj1l{border-bottom-left-radius:10px;border-bottom-right-radius:10px;border-top-left-radius:10px;border-top-right-radius:10px;}
+.r-1e49q8a{border-bottom-color:rgba(245,158,11,1.00);border-left-color:rgba(245,158,11,1.00);border-right-color:rgba(245,158,11,1.00);border-top-color:rgba(245,158,11,1.00);}
 .r-1f0042m{border-bottom-left-radius:5px;border-bottom-right-radius:5px;border-top-left-radius:5px;border-top-right-radius:5px;}
 .r-1j16mh1{border-bottom-left-radius:100%;border-bottom-right-radius:100%;border-top-left-radius:100%;border-top-right-radius:100%;}
 .r-1jkafct{border-bottom-left-radius:2px;border-bottom-right-radius:2px;border-top-left-radius:2px;border-top-right-radius:2px;}
@@ -29,6 +30,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1rvyss1{border-bottom-color:rgba(255,255,255,0.20);border-left-color:rgba(255,255,255,0.20);border-right-color:rgba(255,255,255,0.20);border-top-color:rgba(255,255,255,0.20);}
 .r-1sp51qo{padding:10px;}
 .r-1udh08x{overflow-x:hidden;overflow-y:hidden;}
+.r-1upjcm2{border-bottom-color:rgba(239,68,68,1.00);border-left-color:rgba(239,68,68,1.00);border-right-color:rgba(239,68,68,1.00);border-top-color:rgba(239,68,68,1.00);}
 .r-1uu6nss{padding:5px;}
 .r-1w15a45{border-bottom-color:rgba(229,231,235,1.00);border-left-color:rgba(229,231,235,1.00);border-right-color:rgba(229,231,235,1.00);border-top-color:rgba(229,231,235,1.00);}
 .r-1xfd6ze{border-bottom-left-radius:8px;border-bottom-right-radius:8px;border-top-left-radius:8px;border-top-right-radius:8px;}
@@ -44,6 +46,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-fx7oqy{border-bottom-color:rgba(0,0,255,1.00);border-left-color:rgba(0,0,255,1.00);border-right-color:rgba(0,0,255,1.00);border-top-color:rgba(0,0,255,1.00);}
 .r-kdyh1x{border-bottom-left-radius:6px;border-bottom-right-radius:6px;border-top-left-radius:6px;border-top-right-radius:6px;}
 .r-krxsd3{display:-webkit-box;}
+.r-m4suti{border-bottom-color:rgba(209,213,219,1.00);border-left-color:rgba(209,213,219,1.00);border-right-color:rgba(209,213,219,1.00);border-top-color:rgba(209,213,219,1.00);}
 .r-nsbfu8{padding:16px;}
 .r-rs99b7{border-bottom-width:1px;border-left-width:1px;border-right-width:1px;border-top-width:1px;}
 .r-t60dpp{padding:0px;}
@@ -122,7 +125,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-12vffkv{pointer-events:none!important;}
 .r-135wba7{line-height:24px;}
 .r-13aq9py{animation-name:r-1iq689l;}
-.r-13hce6t{margin-left:4px;}
 .r-13qz1uu{width:100%;}
 .r-13tjlyg{transition-duration:0.1s;}
 .r-1472mwg{height:24px;}
@@ -150,6 +152,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-18u1ve8{color:rgba(255,255,255,0.40);}
 .r-18u37iz{flex-direction:row;}
 .r-19h5ruw{margin-top:15px;}
+.r-19lq7b1{top:16px;}
 .r-19oahor{font-size:64px;}
 .r-19wmn03{width:20px;}
 .r-19z077z{touch-action:none;}
@@ -242,6 +245,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1vr29t4{font-weight:800;}
 .r-1w6e6rj{flex-wrap:wrap;}
 .r-1wbh5a2{flex-shrink:1;}
+.r-1wfu06s{background-color:rgba(248,113,113,1.00);}
 .r-1wtj0ep{justify-content:space-between;}
 .r-1wyyakw{z-index:-1;}
 .r-1wzrnnt{margin-top:16px;}
@@ -268,6 +272,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-633pao * {pointer-events:none;}
 .r-633pao{pointer-events:none!important;}
 .r-6dt33c{opacity:1;}
+.r-6e0ovw{width:80%;}
 .r-6gpygo{margin-bottom:12px;}
 .r-6lgyle{color:rgba(153,27,27,1.00);}
 .r-6taxm2:-ms-input-placeholder{color:var(--placeholderTextColor);opacity:1;}
@@ -298,10 +303,12 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-cfp7ip{width:60px;}
 .r-cpa5s6{scroll-snap-align:start;}
 .r-cqee49{color:rgba(0,0,0,1.00);}
+.r-djgu52{color:rgba(102,102,102,1.00);}
 .r-dkge59{background-color:rgba(170,184,194,1.00);}
 .r-dnmrzs{max-width:100%;}
 .r-dpkc41{background-color:rgba(239,68,68,1.00);}
 .r-drfeu3{background-color:rgba(0,0,0,0.50);}
+.r-e1k2in{right:16px;}
 .r-eafdt9{transition-duration:0.15s;}
 .r-ebwn4k{animation-name:r-q67da2;}
 .r-ehq7j7{background-size:contain;}
@@ -338,6 +345,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-n6v787{font-size:13px;}
 .r-nvplwv{animation-timing-function:ease-out;}
 .r-o4n3w5{width:23px;}
+.r-ojf8lh{gap:6px;}
 .r-orgf3d{opacity:0;}
 .r-pgx3k3{background-color:rgba(243,244,246,1.00);}
 .r-q4m81j{text-align:center;}
@@ -362,6 +370,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-vdtk7f{color:rgba(5,150,105,1.00);}
 .r-vvn4in{background-position:center;}
 .r-vw2c0b{font-weight:bold;}
+.r-wc24c3{z-index:20;}
 .r-wfqgy4{transition-duration:100ms;}
 .r-ws9h79{left:4px;}
 .r-x11e5r{font-family:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
@@ -387,5 +396,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/_expo/static/css/modal.module-33361d5c796745334f151cac6c469469.css" as="style"><link rel="stylesheet" href="/_expo/static/css/modal.module-33361d5c796745334f151cac6c469469.css"><link rel="icon" href="/favicon.ico" /></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><div style="flex:1;display:flex"><!--$--><!--/$--></div></div></div><script src="/_expo/static/js/web/entry-9f8d4ffda334af58510eab2f3c9a34ec.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/_expo/static/css/modal.module-33361d5c796745334f151cac6c469469.css" as="style"><link rel="stylesheet" href="/_expo/static/css/modal.module-33361d5c796745334f151cac6c469469.css"><link rel="icon" href="/favicon.ico" /></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><div style="flex:1;display:flex"><!--$--><div style="flex:1;display:flex"><div class="css-g5y9jx r-13awgt0"><div style="position:absolute;left:0;right:0;top:0;bottom:0;pointer-events:none;visibility:hidden"></div><div class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-97e31f r-bv2aro r-hxflta r-10xqauy r-pgx3k3 r-13awgt0"><div class="css-g5y9jx r-13awgt0 r-1777fci r-u9wvl5"><div class="css-g5y9jx r-14lw9ot r-1q9bdsx r-1a0psd9 r-6gpygo r-nsbfu8 r-1kihuf0 r-hvns9x r-13qz1uu"><div dir="auto" class="css-146c3p1 r-1qar9k r-1x35g6 r-1kfrs79 r-5oul0u r-q4m81j">Completar Perfil</div><div dir="auto" class="css-146c3p1 r-1cucpzw r-ubezar r-1peese0 r-q4m81j">Para continuar, necesitamos que completes tu información personal y cambies tu contraseña.</div><div class="css-g5y9jx r-13qz1uu"><div class="css-g5y9jx r-1ifxtd0"><div dir="auto" class="css-146c3p1 r-1ois7e2 r-ubezar r-majxgm r-f1odvy">Nombre</div><input autoCapitalize="sentences" autoComplete="on" autoCorrect="on" dir="auto" rows="1" spellCheck="true" virtualkeyboardpolicy="auto" class="css-11aywtz r-6taxm2 r-14lw9ot r-m4suti r-1xfd6ze r-rs99b7 r-ubezar r-1mmae3n r-3o4zer" value=""/></div><div class="css-g5y9jx r-1ifxtd0"><div dir="auto" class="css-146c3p1 r-1ois7e2 r-ubezar r-majxgm r-f1odvy">Apellido</div><input autoCapitalize="sentences" autoComplete="on" autoCorrect="on" dir="auto" rows="1" spellCheck="true" virtualkeyboardpolicy="auto" class="css-11aywtz r-6taxm2 r-14lw9ot r-m4suti r-1xfd6ze r-rs99b7 r-ubezar r-1mmae3n r-3o4zer" value=""/></div><div class="css-g5y9jx r-1ifxtd0"><div dir="auto" class="css-146c3p1 r-1ois7e2 r-ubezar r-majxgm r-f1odvy">DNI</div><input autoCapitalize="sentences" autoComplete="on" autoCorrect="on" dir="auto" inputMode="numeric" rows="1" spellCheck="true" virtualkeyboardpolicy="auto" class="css-11aywtz r-6taxm2 r-14lw9ot r-m4suti r-1xfd6ze r-rs99b7 r-ubezar r-1mmae3n r-3o4zer" value=""/></div><div class="css-g5y9jx r-1ifxtd0"><div dir="auto" class="css-146c3p1 r-1ois7e2 r-ubezar r-majxgm r-f1odvy">Teléfono</div><input autoCapitalize="sentences" autoComplete="on" autoCorrect="on" dir="auto" rows="1" spellCheck="true" type="tel" virtualkeyboardpolicy="auto" class="css-11aywtz r-6taxm2 r-14lw9ot r-m4suti r-1xfd6ze r-rs99b7 r-ubezar r-1mmae3n r-3o4zer" value=""/></div><div class="css-g5y9jx r-1ifxtd0"><div dir="auto" class="css-146c3p1 r-1ois7e2 r-ubezar r-majxgm r-f1odvy">Nueva Contraseña</div><input autoCapitalize="sentences" autoComplete="on" autoCorrect="on" dir="auto" rows="1" spellCheck="true" type="password" virtualkeyboardpolicy="auto" class="css-11aywtz r-6taxm2 r-14lw9ot r-m4suti r-1xfd6ze r-rs99b7 r-ubezar r-1mmae3n r-3o4zer" value=""/></div><div class="css-g5y9jx r-1ifxtd0"><div dir="auto" class="css-146c3p1 r-1ois7e2 r-ubezar r-majxgm r-f1odvy">Confirmar Contraseña</div><input autoCapitalize="sentences" autoComplete="on" autoCorrect="on" dir="auto" rows="1" spellCheck="true" type="password" virtualkeyboardpolicy="auto" class="css-11aywtz r-6taxm2 r-14lw9ot r-m4suti r-1xfd6ze r-rs99b7 r-ubezar r-1mmae3n r-3o4zer" value=""/></div><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-1xfd6ze r-18u37iz r-1777fci r-zpf9xq r-1mmae3n r-3pj75a r-knv0ih" style="transition-duration:0s"><div dir="auto" class="css-146c3p1 r-1kfrs79 r-jwli3a">Completar Perfil</div></div></div></div></div></div><!--/$--></div></div></div></div></div><!--/$--></div></div></div><script src="/_expo/static/js/web/entry-cf6493893412be6c09ead907660bc66f.js" defer></script>
 </body></html>
