--- a/+not-found.html
+++ b/+not-found.html
@@ -15,6 +15,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-13awgt0{flex:1;}
 .r-14f9gny{border-bottom-width:4px;border-left-width:4px;border-right-width:4px;border-top-width:4px;}
 .r-16cv7a7{border-bottom-color:rgba(187,247,208,1.00);border-left-color:rgba(187,247,208,1.00);border-right-color:rgba(187,247,208,1.00);border-top-color:rgba(187,247,208,1.00);}
+.r-16uyjmq{border-bottom-left-radius:22px;border-bottom-right-radius:22px;border-top-left-radius:22px;border-top-right-radius:22px;}
 .r-1867qdf{border-bottom-left-radius:16px;border-bottom-right-radius:16px;border-top-left-radius:16px;border-top-right-radius:16px;}
 .r-18nyffw{border-bottom-color:rgba(16,185,129,1.00);border-left-color:rgba(16,185,129,1.00);border-right-color:rgba(16,185,129,1.00);border-top-color:rgba(16,185,129,1.00);}
 .r-18t5edp{border-bottom-color:rgba(253,230,138,1.00);border-left-color:rgba(253,230,138,1.00);border-right-color:rgba(253,230,138,1.00);border-top-color:rgba(253,230,138,1.00);}
@@ -64,6 +65,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-d045u9{border-bottom-width:2px;border-left-width:2px;border-right-width:2px;border-top-width:2px;}
 .r-d23pfw{padding:24px;}
 .r-dta0w2{flex:2;}
+.r-e65kyq{padding:30px;}
 .r-edyy15{padding:8px;}
 .r-en0kqj{border-bottom-color:rgba(254,202,202,1.00);border-left-color:rgba(254,202,202,1.00);border-right-color:rgba(254,202,202,1.00);border-top-color:rgba(254,202,202,1.00);}
 .r-fx7oqy{border-bottom-color:rgba(0,0,255,1.00);border-left-color:rgba(0,0,255,1.00);border-right-color:rgba(0,0,255,1.00);border-top-color:rgba(0,0,255,1.00);}
@@ -74,6 +76,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-nsiyw1{border-bottom-left-radius:32px;border-bottom-right-radius:32px;border-top-left-radius:32px;border-top-right-radius:32px;}
 .r-r0jvzb{border-bottom-color:rgba(219,234,254,1.00);border-left-color:rgba(219,234,254,1.00);border-right-color:rgba(219,234,254,1.00);border-top-color:rgba(219,234,254,1.00);}
 .r-rs99b7{border-bottom-width:1px;border-left-width:1px;border-right-width:1px;border-top-width:1px;}
+.r-sdzq82{border-bottom-color:rgba(255,255,255,0.30);border-left-color:rgba(255,255,255,0.30);border-right-color:rgba(255,255,255,0.30);border-top-color:rgba(255,255,255,0.30);}
 .r-t23y2h{border-bottom-left-radius:14px;border-bottom-right-radius:14px;border-top-left-radius:14px;border-top-right-radius:14px;}
 .r-t60dpp{padding:0px;}
 .r-tuq35u{padding:4px;}
@@ -188,11 +191,13 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-14von57{color:rgba(245,158,11,1.00);}
 .r-14yzgew{line-height:18px;}
 .r-150rngu{-webkit-overflow-scrolling:touch;}
+.r-159e9uq{box-shadow:0px 4px 8px rgba(16,185,129,0.30);}
 .r-159ydal{color:rgba(59,130,246,1.00);}
 .r-15d164r{margin-bottom:10px;}
 .r-15u8wra{color:rgba(147,51,234,1.00);}
 .r-15zivkp{margin-bottom:4px;}
 .r-16dba41{font-weight:400;}
+.r-16pcm1t{gap:20px;}
 .r-16y2uox{flex-grow:1;}
 .r-173mn98{align-self:flex-end;}
 .r-173mzie{transform:scaleY(-1);}
@@ -285,6 +290,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1jfjq5a{color:rgba(220,38,38,1.00);}
 .r-1jj8364{margin-left:auto;}
 .r-1jkjb{margin-left:8px;}
+.r-1jnkns4{gap:0px;}
 .r-1jnv7zo{color:rgba(99,47,116,1.00);}
 .r-1jrvlrt{color:rgba(6,95,70,1.00);}
 .r-1kb76zh{margin-right:8px;}
@@ -304,6 +310,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1m04atk{padding-left:8px;}
 .r-1m8f1gi{color:rgba(209,213,219,1.00);}
 .r-1mdbw0j{padding-bottom:0px;}
+.r-1mi0q7o{padding-bottom:10px;}
 .r-1mlwlqe{flex-basis:auto;}
 .r-1mrlafo{background-position:0;}
 .r-1muvv40{animation-iteration-count:infinite;}
@@ -349,6 +356,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1tsma7m{color:rgba(239,68,68,1.00);}
 .r-1u59ra0{box-shadow:0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);}
 .r-1udbk01{text-overflow:ellipsis;}
+.r-1ugchlj{height:44px;}
 .r-1ui5ee8{font-size:32px;}
 .r-1ul06mb{margin-left:32px;}
 .r-1uq9rlk{max-height:200px;}
@@ -364,6 +372,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1x0uki6{margin-top:20px;}
 .r-1x35g6{font-size:24px;}
 .r-1xcajam{position:fixed;}
+.r-1xgpy0w{color:rgba(67,56,202,1.00);}
 .r-1xi2sqm{width:340px;}
 .r-1xk3nun{max-height:400px;}
 .r-1xnzce8{-moz-user-select:text;-webkit-user-select:text;user-select:text;}
@@ -373,6 +382,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1ye8kvj{max-width:600px;}
 .r-1yef0xd{animation-name:r-11cv4x;}
 .r-1ylxudv{box-shadow:0px 4px 12px rgba(0,0,0,0.10);}
+.r-1yzrgaz{background-color:rgba(147,197,253,1.00);}
 .r-2eszeu::-webkit-scrollbar{display:none}
 .r-2eszeu{scrollbar-width:none;}
 .r-2tavb8{background-color:rgba(0,0,0,0.60);}
@@ -386,6 +396,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-417010{z-index:0;}
 .r-4gszlv{background-size:cover;}
 .r-4v7adb{height:5px;}
+.r-5fcqz0{line-height:17px;}
 .r-5kkj8d{border-top-width:1px;}
 .r-5oul0u{margin-bottom:8px;}
 .r-5sllbi{box-shadow:0 1px 3px 0 rgba(0, 0, 0, 0.1);}
@@ -441,6 +452,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-cpa5s6{scroll-snap-align:start;}
 .r-cqee49{color:rgba(0,0,0,1.00);}
 .r-cqzzvf{border-top-right-radius:20px;}
+.r-cw1gq1{box-shadow:0 2px 4px rgba(0,0,0,0.1);}
 .r-d7quje{border-left-color:rgba(245,158,11,1.00);}
 .r-dcqb1h{height:500px;}
 .r-djgu52{color:rgba(102,102,102,1.00);}
@@ -486,6 +498,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-kc8jnq{margin-top:6px;}
 .r-kemksi{background-color:rgba(0,0,0,1.00);}
 .r-kizejy{color:rgba(155,161,166,1.00);}
+.r-kk11si{box-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);}
 .r-knv0ih{margin-top:8px;}
 .r-kwpbio{height:650px;}
 .r-kzbkwu{padding-bottom:12px;}
@@ -506,6 +519,8 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-mhe3cw{z-index:10;}
 .r-mro3nb{background-color:rgba(21,23,24,1.00);}
 .r-n6v787{font-size:13px;}
+.r-ndvcnb{border-bottom-width:0px;}
+.r-nndt6i{background-color:rgba(245,243,255,1.00);}
 .r-o4n3w5{width:23px;}
 .r-o52ifk{height:100px;}
 .r-o5e8d5{background-color:rgba(239,246,255,1.00);}
@@ -529,6 +544,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-s62m2j{animation-timing-function:cubic-bezier(0.47, 0, 0.745, 0.715);}
 .r-sfbmgh{z-index:9999;}
 .r-sga3zk{height:64px;}
+.r-sgbo92{opacity:0.9;}
 .r-sgj0by{font-family:Barlow-Medium;}
 .r-so7y2g{line-height:64px;}
 .r-ss4zfz{height:260px;}
@@ -543,6 +559,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-ubezar{font-size:16px;}
 .r-uho16t{font-size:34px;}
 .r-uoibet{transform:rotate(180deg);}
+.r-usgzl9{width:44px;}
 .r-uvuy5l{height:60px;}
 .r-vacyoi{padding-bottom:64px;}
 .r-van48c{caret-color:transparent;}
@@ -551,6 +568,8 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-vw2c0b{font-weight:bold;}
 .r-wc24c3{z-index:20;}
 .r-wfqgy4{transition-duration:100ms;}
+.r-wfsxgm{box-shadow:0 4px 6px -1px rgba(59, 130, 246, 0.3);}
+.r-wgabs5{border-bottom-width:2px;}
 .r-wk8lta{padding-top:0px;}
 .r-ws9h79{left:4px;}
 .r-x11e5r{font-family:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
@@ -565,6 +584,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-yie26v{z-index:1001;}
 .r-yj30ev{right:24px;}
 .r-ytfskt{min-width:90px;}
+.r-yy2aun{font-size:26px;}
 .r-z7pwl0{max-width:700px;}
 .r-z80fyv{height:20px;}
 .r-zchlnj{right:0px;}
@@ -587,5 +607,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
 @keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><style id="expo-generated-fonts">@font-face{font-family:"Barlow-Regular";src:url("/assets/assets/fonts/Barlow-Regular.9373fb661b5c2954ab84d1b7f42774fe.ttf");font-display:auto}
 @font-face{font-family:"Barlow-Medium";src:url("/assets/assets/fonts/Barlow-Medium.bdffb48240a3383080812d6830ff6f54.ttf");font-display:auto}
-@font-face{font-family:"Barlow-SemiBold";src:url("/assets/assets/fonts/Barlow-SemiBold.29527ab52af2334e2bcb6290c8692f70.ttf");font-display:auto}</style><link rel="preload" href="/assets/assets/fonts/Barlow-Regular.9373fb661b5c2954ab84d1b7f42774fe.ttf" as="font" crossorigin="" /><link rel="preload" href="/assets/assets/fonts/Barlow-Medium.bdffb48240a3383080812d6830ff6f54.ttf" as="font" crossorigin="" /><link rel="preload" href="/assets/assets/fonts/Barlow-SemiBold.29527ab52af2334e2bcb6290c8692f70.ttf" as="font" crossorigin="" /><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/_expo/static/css/global-styles-bd383bdcb06eec5a7747090f564c44ea.css" as="style"><link rel="stylesheet" href="/_expo/static/css/global-styles-bd383bdcb06eec5a7747090f564c44ea.css"><link rel="icon" href="/favicon.ico" /></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><!--$--><div style="position:absolute;left:0;right:0;top:0;bottom:0;pointer-events:none;visibility:hidden"></div><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-1awozwy r-13awgt0 r-1777fci r-1pcd2l5"><div dir="auto" class="css-146c3p1 r-adyw6z r-1kfrs79">Esta página no existe.</div><a href="/" dir="auto" role="link" class="css-146c3p1 r-19h5ruw r-1d7mnkm r-1loqt21"><span class="css-1jxf684">Go to home screen!</span></a></div><!--/$--></div></div></div></div><div class="css-g5y9jx r-1awozwy r-1777fci r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-12vffkv" style="opacity:0;transform:translateY(0px)" data-testid="toastAnimatedContainer"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-14lw9ot r-kdyh1x r-193tdxn r-18u37iz r-uvuy5l r-1xi2sqm r-jjeupf" style="border-left-color:rgba(105,199,121,1.00);transition-duration:0s" data-testid="toastTouchableContainer"><div class="css-g5y9jx r-1habvwh r-13awgt0 r-1777fci r-1kti4dy" data-testid="toastContentContainer"></div></div></div><!--/$--></div></div><script src="/_expo/static/js/web/entry-67dfb43b29592ec0fff4b36b4e45c80c.js" defer></script>
+@font-face{font-family:"Barlow-SemiBold";src:url("/assets/assets/fonts/Barlow-SemiBold.29527ab52af2334e2bcb6290c8692f70.ttf");font-display:auto}</style><link rel="preload" href="/assets/assets/fonts/Barlow-Regular.9373fb661b5c2954ab84d1b7f42774fe.ttf" as="font" crossorigin="" /><link rel="preload" href="/assets/assets/fonts/Barlow-Medium.bdffb48240a3383080812d6830ff6f54.ttf" as="font" crossorigin="" /><link rel="preload" href="/assets/assets/fonts/Barlow-SemiBold.29527ab52af2334e2bcb6290c8692f70.ttf" as="font" crossorigin="" /><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/_expo/static/css/global-styles-bd383bdcb06eec5a7747090f564c44ea.css" as="style"><link rel="stylesheet" href="/_expo/static/css/global-styles-bd383bdcb06eec5a7747090f564c44ea.css"><link rel="icon" href="/favicon.ico" /></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><!--$--><div style="position:absolute;left:0;right:0;top:0;bottom:0;pointer-events:none;visibility:hidden"></div><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-1awozwy r-13awgt0 r-1777fci r-1pcd2l5"><div dir="auto" class="css-146c3p1 r-adyw6z r-1kfrs79">Esta página no existe.</div><a href="/" dir="auto" role="link" class="css-146c3p1 r-19h5ruw r-1d7mnkm r-1loqt21"><span class="css-1jxf684">Go to home screen!</span></a></div><!--/$--></div></div></div></div><div class="css-g5y9jx r-1awozwy r-1777fci r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-12vffkv" style="opacity:0;transform:translateY(0px)" data-testid="toastAnimatedContainer"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-14lw9ot r-kdyh1x r-193tdxn r-18u37iz r-uvuy5l r-1xi2sqm r-jjeupf" style="border-left-color:rgba(105,199,121,1.00);transition-duration:0s" data-testid="toastTouchableContainer"><div class="css-g5y9jx r-1habvwh r-13awgt0 r-1777fci r-1kti4dy" data-testid="toastContentContainer"></div></div></div><!--/$--></div></div><script src="/_expo/static/js/web/entry-8261732c273104bc7f440c793adcf7db.js" defer></script>
 </body></html>
